@@ -141,9 +141,9 @@ protected:
   CosNotification::QoSProperties pc_qos_;
 };
 
-typedef TAO_Singleton<TAO_Notify_Properties, TAO_SYNCH_MUTEX> TAO_Notify_PROPERTIES;
-
 TAO_NOTIFY_SERV_SINGLETON_DECLARE (TAO_Singleton, TAO_Notify_Properties, TAO_SYNCH_MUTEX)
+
+typedef TAO_Singleton<TAO_Notify_Properties, TAO_SYNCH_MUTEX> TAO_Notify_PROPERTIES;
 
 #if defined (__ACE_INLINE__)
 #include "Properties.inl"
